[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/world_edtior/editor/dragable_node/GraphNode.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0196078, 0.0235294, 0.027451, 1 )

[node name="GraphNode" type="PanelContainer"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 80.0
margin_bottom = 53.0
focus_mode = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
border_color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 80.0
margin_bottom = 53.0
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 78.0
margin_bottom = 51.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_right = 76.0
margin_bottom = 49.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 64.0
margin_bottom = 37.0
size_flags_horizontal = 4
text = "Start"

[connection signal="focus_entered" from="." to="." method="_on_GraphNode_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_GraphNode_focus_exited"]
[connection signal="node_moved" from="." to="." method="_on_GraphNode_node_moved"]
